--- a/maquetado/css/style.css
+++ b/maquetado/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300');
 header{
 	width: 100%;
 	height: 1045px;
@@ -17,34 +18,26 @@ header{
 	margin-right: 200px;
 }
 .bottomHeader{
+	width: 100%;
+	overflow: hidden;
 	background: #20222e;
-	height: 116px;
+	position: relative;
+	z-index: 1;
 }
 .logo{
 	height: 100%;
-	margin-left: 190px;
+	margin-left: 90px;
 	padding: 23px;
-}
-nav{
-	float: right;
-	height: 100%;
-	margin-right: 154px;
-}
-nav li{
-	display: inline-flex;
-}
-nav a{
-	color: #fff;
-	padding: 43px;
-}
-nav a:hover{
-	color: #fff;
-	background: #20222e;
-	border-bottom: 6px solid #edaa3d; 
 }
 #slider{
 	width: 100%;
-	height: ;
+	height: 998px;
+	background: url("../img/slide1.jpg");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	position: absolute;
+	top: 47px;
 }
 #contenedorNosotros {
 	width: 100%;
@@ -52,11 +45,92 @@ nav a:hover{
 	background: url(../img/slide2.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-position: center; 
+	background-position: center;
+	padding-top: 200px;
+    padding-right: 200px;
+    padding-bottom: 50px;
+    padding-left: 35px; 
 }
-h2{
-	font-family: "Montserrat" , sans-serif;
+h2,h1,h3{
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 300;
 	color: #FEFEFE;
 	font-size: 28px;
+}
+p{
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 300;
+	color: #FEFEFE;
+	font-size: 15px;	
+}
+#contenedorHistorial{
+	width: 100%;
+	height: 248px;
+	background: #2a3944;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	padding: 70px  40px  70px  40px;  
+}
+#contenedorImagenes{
+	width: 100%;
+	height: 1056px;
+	background: #FEFEFE;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat; 
+}
+
+/*menu*/
+.topnav {
+  overflow: hidden;
+  background-color: #20222e;
+}
+
+.topnav a {
+  float: left;
+  height: 100%;
+  display: block;
+  color: #fff;
+  text-align: center;
+  padding: 43px 70px 43px 80px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  	color: #fff;
+	background: #20222e;
+	border-bottom: 6px solid #edaa3d;
+}
+
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
